Removing commented code